2007-03-20 Refactored units support and added new examples - JDH

2007-03-19 Added Mike's units patch - JDH

2007-03-18 Matshow as an Axes method; test version matshow1() in
           pylab; added 'integer' Boolean kwarg to MaxNLocator
           initializer to force ticks at integer locations. - EF

2007-03-17 Preliminary support for clipping to paths agg - JDH

2007-03-17 Text.set_text() accepts anything convertible with '%s' - EF

2007-03-14 Add masked-array support to hist. - EF

2007-03-03 Change barh to take a kwargs dict and pass it to bar.
           Fixes sf bug #1669506.

2007-03-02 Add rc parameter pdf.inheritcolor, which disables all
           color-setting operations in the pdf backend. The idea is
           that you include the resulting file in another program and
           set the colors (both stroke and fill color) there, so you
           can use the same pdf file for e.g. a paper and a
           presentation and have them in the surrounding color. You
           will probably not want to draw figure and axis frames in
           that case, since they would be filled in the same color. - JKS

2007-02-26 Prevent building _wxagg.so with broken Mac OS X wxPython. - ADS

2007-02-23 Require setuptools for Python 2.3 - ADS

2007-02-22 WXAgg accelerator updates - KM
           WXAgg's C++ accelerator has been fixed to use the correct wxBitmap
           constructor.

           The backend has been updated to use new wxPython functionality to
           provide fast blit() animation without the C++ accelerator.  This
           requires wxPython 2.8 or later.  Previous versions of wxPython can
           use the C++ acclerator or the old pure Python routines.

           setup.py no longer builds the C++ accelerator when wxPython >= 2.8
           is present.

           The blit() method is now faster regardless of which agg/wxPython
           conversion routines are used.

2007-02-21 Applied the PDF backend patch by Nicolas Grilly.