@@ -1,3 +1,14 @@
+    Axes.errorbar uses Axes.vlines and Axes.hlines to draw its error
+    limits int he vertical and horizontal direction.  As you'll see
+    in the changes below, these funcs now return a LineCollection
+    rather than a list of lines.  The new return signature for
+    errorbar is  ylins, caplines, errorcollections where
+    errorcollections is a xerrcollection, yerrcollection
+
+    Axes.vlines and Axes.hlines now create and returns a LineCollection, not a list
+    of lines.  This is much faster.  The kwarg signature has changed,
+    so consult the docs
+
     MaxNLocator accepts a new Boolean kwarg ('integer') to force
     ticks to integer locations.
 
